app container exit 문제 해결

--- a/docker_practice_2/flask-web-db/Dockerfile
+++ b/docker_practice_2/flask-web-db/Dockerfile
@@ -4,10 +4,11 @@ FROM python:3.8
 LABEL email="dini@socar.kr"
 LABEL name="dini"
 
-COPY . /app
+# local . -> container /app 복사
+COPY . /app 
 
 # We copy just the requirements.txt first to leverage Docker cache
-# COPY requirements.txt /app/requirements.txt
+COPY requirements.txt /app/requirements.txt
 
 # working directory 설정
 WORKDIR /app
@@ -15,5 +16,5 @@ WORKDIR /app
 # requirements.txt 파일에서 flask 끌어와서 pip 설치
 RUN pip install -r requirements.txt
 
-# 실행할 컨테이너를 configure한다(?)
-CMD [ "python", "app.py" ]
+# 절대경로, 상대경로 둘다 가능 (WORKDIR 고려)
+CMD [ "python", "/app/src/app.py" ] 
