--- a/docker_practice_2/flask-web-db/docker-compose.yml
+++ b/docker_practice_2/flask-web-db/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   db:
-    image : nouchka/sqlite3:latest
+    image : nouchka/sqlite3:latest # mysql, postgres 같은 좀더 보편적인 image로 바꿔보기. 
     container_name  : "db_container"
     stdin_open : true
     tty : true
@@ -9,7 +9,7 @@ services:
       - ./:/app
   
   app:
-    image : "python:3.8"
+    # image : "python:3.8"
     # links : # 다른 서비스 접근 가능 
     #  - db 
     depends_on: # 다른 서비스 먼저 실행
@@ -21,6 +21,6 @@ services:
     environment: # 환경 변수 설정
       - FLASK_ENV=/development
       - FLASK_APP=/app/src/app.py
-      - DATABASE=/app/test.db
+      # - DATABASE=/app/test.db  # create local DB within app_container -> 충돌 가능성은 낮음
     ports:
       - 5000:5000
