--- a/docker_practice_2/flask-web-db/pyproject.toml
+++ b/docker_practice_2/flask-web-db/pyproject.toml
@@ -6,11 +6,12 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+PyMySQL = "^1.0.2"
 Flask = "^2.0.1"
-Flask-SQLAlchemy = "^2.5.1"
+mysqlclient = "^2.0.3"
+mysql-connector-python = "^8.0.26"
 
 [tool.poetry.dev-dependencies]
-black = "^21.7b0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
