--- a/docker_practice_2/flask-web-db/docker-compose.yml
+++ b/docker_practice_2/flask-web-db/docker-compose.yml
@@ -7,26 +7,22 @@ services:
     tty : true
     volumes:
       - ./:/app
+
     environment:
       MYSQL_DATABASE: 'test_db'
-      MYSQL_HOST: 'db:3306'
-
-      # docker hub 문서 참고하여 env var 설정하면 초기 유저로 만들어주는 것 있음. 
-      # 유저를 따로 만들기. (root로 접속하지 말고. 새로 권한 .,,)
+      MYSQL_ROOT_PASSWORD: 'root'
 
     ports: 
       - "30000:3306"
   
   app:
-    # links : # 다른 서비스 접근 가능 
-    #  - db 
     depends_on: # 다른 서비스 먼저 실행
       - db
     container_name : "app_container"
     volumes:
       - ./:/app
     build : . # 도커파일 경로 지정
-    # command : bash -c python /app/src/app.py # Dockerfile CMD overriding !! 
+
     environment: # 환경 변수 설정
       - FLASK_ENV=/development
       - FLASK_APP=/app/src/app.py 
