--- a/docker_practice_2/airflow/docker-compose.yaml
+++ b/docker_practice_2/airflow/docker-compose.yaml
@@ -75,6 +75,8 @@ services:
       interval: 5s
       retries: 5
     restart: always
+    networks:
+      - flask-web-db_external-example
 
   redis:
     image: redis:latest
@@ -86,6 +88,8 @@ services:
       timeout: 30s
       retries: 50
     restart: always
+    networks:
+      - flask-web-db_external-example
 
   airflow-webserver:
     <<: *airflow-common
@@ -93,11 +97,13 @@ services:
     ports:
       - 8080:8080
     healthcheck:
-      test: ["CMD", "curl", "--fail", "http://0.0.0.0:8080/health"]
+      test: ["CMD", "curl", "--fail", "http://localhost:8080/health"]
       interval: 10s
       timeout: 10s
       retries: 5
     restart: always
+    networks:
+      - flask-web-db_external-example
 
   airflow-scheduler:
     <<: *airflow-common
@@ -108,6 +114,8 @@ services:
       timeout: 10s
       retries: 5
     restart: always
+    networks:
+      - flask-web-db_external-example
 
   airflow-worker:
     <<: *airflow-common
@@ -120,6 +128,8 @@ services:
       timeout: 10s
       retries: 5
     restart: always
+    networks:
+      - flask-web-db_external-example
 
   airflow-init:
     <<: *airflow-common
@@ -130,6 +140,8 @@ services:
       _AIRFLOW_WWW_USER_CREATE: 'true'
       _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME:-airflow}
       _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD:-airflow}
+    networks:
+    - flask-web-db_external-example
 
   flower:
     <<: *airflow-common
@@ -137,11 +149,18 @@ services:
     ports:
       - 5555:5555
     healthcheck:
-      test: ["CMD", "curl", "--fail", "http://0.0.0.0:5555/"]
+      test: ["CMD", "curl", "--fail", "http://localhost:5555/"]
       interval: 10s
       timeout: 10s
       retries: 5
     restart: always
+    networks:
+      - flask-web-db_external-example
+
+networks: 
+  flask-web-db_external-example: 
+    external: true
 
 volumes:
   postgres-db-volume:
+
