--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 .DS_Store
-docker_practice_2/airflow/logs/dag_processor_manager/*
-docker_practice_2/airflow/logs/scheduler/*
+docker_practice_2/airflow/logs/dag_processor_manager/
+docker_practice_2/airflow/logs/scheduler/
